--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@ release
  - tabbing: import, filter, display, social
 
 future
+ - replace column layout by fullscreen layout: worldmap as default view
  - client side compression
  - social media sharing
  - context menu: open image in new tab, download
