--- a/ChangeLog
+++ b/ChangeLog
@@ -1,16 +1,16 @@
 release
- - test coverage 100%
- - display time/location in popup image
+ - shiny/selenium tests
+ - display time/location on mouseover
  x cleanup directories
  x resource file containing text/translations
  x table/filter containing exif information
  x tabbing: import, filter, display
  x timeline: in new tab or linked to map
+ x mobile optimization
+ x replace column layout by fullscreen layout: worldmap as default view
 
 future
- - mobile optimization
  - exif-js(https://github.com/exif-js/exif-js)
- - replace column layout by fullscreen layout: worldmap as default view
  - client side compression (http://makeitsolutions.com/labs/jic/)
  - social media sharing (possibly https://shiny.rstudio.com/articles/bookmarking-state.html if persistent file storage possible)
  - context menu: open image in new tab, download
